[package]
name = "csv_multithread"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]

build = "build.rs"

[dependencies]
csv = "*"
itertools = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
criterion = "*"

[build-dependencies]
gcc = "0.3.54"

[[bench]]
name = "benchmark"
harness = false

